[gd_scene load_steps=2 format=3 uid="uid://dsk2haesxs5j5"]

[ext_resource type="Script" path="res://ui/tile/tile_ore_panel/item_ore_panel.gd" id="1_n0mbn"]

[node name="ItemOrePanel" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_n0mbn")

[node name="Item" type="Panel" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="ItemContainer" type="Control" parent="Item"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "ItemName"

[node name="ItemName2" type="Label" parent="."]
layout_mode = 2
text = "*"

[node name="ItemAmount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ItemAmount"

[node name="OreAmount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "OreAmount"
